# kalypsso-core

./: .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  COPYRIGHT.md  REUSE.toml  Readme.md  _typos.toml  kalypsso-core-config.cmake.in
dependencies/: CMakeLists.txt  Readme.md
dependencies/cmake/: build_dependencies.cmake  build_hdf5.cmake  build_p4est.cmake  modulefile.in  modulefiles.cmake
src/kalypsso/core/: AMRContext.h  AMRCycleDriver.h  AMRMeshInfo.h  AMRMeshMonitoring.cpp  AMRMeshMonitoring.h  AMRmesh.h  AMRmesh_utils.h  AlternatingDirectionScheduler.cpp  AlternatingDirectionScheduler.h  BinomialCoef.h  BitFieldHelper.h  BitFieldInteger.h  CMakeLists.txt  CheckEdgeSiblingsConnectivity.cpp  CheckEdgeSiblingsConnectivity.h  CheckFaceBorderCompatibility.cpp  CheckFaceBorderCompatibility.h  ComputeConformalFullStatus.h  ComputeConformalStatus.h  ComputeCurvature.cpp  ComputeCurvature.h  ComputeDataSliceAlongLine.cpp  ComputeDataSliceAlongLine.h  ComputeDivergence.cpp  ComputeDivergence.h  ComputeError.h  ComputeFilteredCurvature.cpp  ComputeFilteredCurvature.h  ComputeGhostedScalarField.cpp  ComputeGhostedScalarField.h  ComputeInterfaceNormalVector.cpp  ComputeInterfaceNormalVector.h  ComputeRefineFlags.cpp  ComputeRefineFlags.h  ComputeRefineFlagsMM.cpp  ComputeRefineFlagsMM.h  ComputeRefineFlags_utils.h  ComputeSchlieren.cpp  ComputeSchlieren.h  ComputeSmoothInterfaceFunction.cpp  (+133 more)
src/kalypsso/core/eos/: EosWrapperMonoFluid.h  IdealGasEos.h  IdealGasMixture.h  MieGruneisenEosArray.cpp  MieGruneisenEosArray.h  MieGruneisenEosCochranChan.h  MieGruneisenEosIdealGas.h  MieGruneisenEosJWL.h  MieGruneisenEosSW.h  MieGruneisenEosSW2.h  MieGruneisenEosStiffenedGas.h  MieGruneisenEosVanDerWaalsGas.h  MieGruneisenMixture.cpp  MieGruneisenMixture.h  README_Mie_Gruneisen_EOS.md  README_vanDerWaalsEos.md  StiffenedGas.py  StiffenedGasEos.h  StiffenedGasMixture.h  VanDerWaalsGasEos.h  eos_utils.h
src/kalypsso/core/geometry/: Box.h  GeometryTraits.h  Point.h  Readme.md  Sphere.h  Triangle.h  Vector.h
src/kalypsso/core/models/: EulerEquations.h  Hydro.cpp  Hydro.h  HydroSettings.cpp  HydroSettings.h  HydroState.h  MHD.cpp  MHD.h  MHDSettings.cpp  MHDSettings.h  MHDState.h  RiemannSolvers.h  RiemannSolvers_MHD.h  mhd_utils.h  riemann_solver_types.h  utils_hydro.h
src/kalypsso/core/problems/: AlfvenParams.h  BlastParams.h  BreakingWaveParams.h  CircleAdvectionParams.h  DiamagCavityParams.h  DoubleMachReflectionParams.h  DropletAdvectionParams.h  FieldLoopAdvectionParams.h  FourQuadrantParams.h  GreshoVortexParams.h  ImplodeParams.h  IsentropicVortexParams.h  KHParams.h  MHDShockTubeParams.h  MultiFluidShockTubeParams.h  OrszagTangParams.h  RayleighTaylorParams.h  RotorParams.h  (+14 more)
test/: CMakeLists.txt
test/AMRkey/: CMakeLists.txt  decode_orchard.cpp  encode_orchard.cpp  test_orchard.cpp
test/AMRmesh/: CMakeLists.txt  clean_data.cmake  plot_brick_connectivity_2d.py  plot_brick_connectivity_3d.py  plot_orchard_keys.py  test_AMRContext.cpp  test_AMR_ghost_exchange_mpi.cpp  test_AMRmesh.cpp  test_AMRmesh_2d.ini  test_AMRmesh_3d.ini  test_AMRmesh_brick_2d.ini  test_AMRmesh_brick_2d_ghost_exchange_mpi.ini  test_AMRmesh_brick_3d.ini  test_AMRmesh_brick_3d_ghost_exchange_mpi.ini  test_AMRmesh_fill_block_ghost_cells.cpp  test_AMRmesh_fill_block_ghost_cells_in_place.cpp  test_AMRmesh_fill_block_ghost_cells_v2.cpp  test_AMRmesh_fill_block_ghost_faces.cpp  test_AMRmesh_fill_ghost_brick_2d.ini  test_AMRmesh_fill_ghost_brick_3d.ini  test_AMRmesh_refine_flags.cpp  test_AMRmesh_simple_2d.ini  test_AMRmesh_simple_3d.ini  test_AMRmesh_stencil.cpp  test_AMRmesh_stencil_2d.ini  test_AMRmesh_stencil_3d.ini  test_AMRmesh_stencil_helper.cpp  test_AMRmesh_userdata.cpp  test_AMRmesh_userdata_2d.ini  test_AMRmesh_userdata_3d.ini  test_brick_connectivity.cpp  test_first_derivative.cpp
test/HighFive/: CMakeLists.txt  parallel_hdf5_collective_io_read.cpp  parallel_hdf5_collective_io_write.cpp
test/MeshMap/: CMakeLists.txt  test_MeshMap.cpp  test_MeshMap_brick_2d.ini  test_MeshMap_brick_3d.ini  test_MeshMap_fillOutside.cpp
test/container/: CMakeLists.txt  create_DataArrayBlock.cpp  create_EdgeDataArrayBlock.cpp  create_FaceDataArrayBlock.cpp
test/core/: CMakeLists.txt  test_binomial_coef.cpp
test/cpptrace/: CMakeLists.txt  test_cpptrace.cpp
test/io/: CMakeLists.txt  clean_data.cmake  test_io.cpp  test_io_brick.cpp  test_io_hdf5.ini  test_io_hdf5_block.ini  test_io_vtk.ini
test/kokkos/: CMakeLists.txt  amr_key.h  compute_mandelbrot_amr.cpp  query_device_kokkos.cpp  test_kokkos_mdrange.cpp  test_kokkos_mpi.cpp  test_kokkos_team_mdrange.cpp  test_kokkos_teamvector.cpp  test_morton_key.cpp  test_parallel_scan.cpp  test_unordered_map.cpp
test/monitoring/: CMakeLists.txt  test_config.ini  test_profiling.cpp
test/p4est_simple/: CMakeLists.txt  simple_2d.cpp  simple_3d.cpp
test/p4est_wrapper/: CMakeLists.txt  test_p4est_wrapper.cpp  test_p4est_wrapper_old.cpp
test/spdlog/: CMakeLists.txt  test_spdlog.cpp
test/test_common/: CMakeLists.txt  DataWriter.cpp  DataWriter.h  FillOutside.cpp  FillOutside.h  FillOutside2.cpp  FillOutside2.h  InitialAMRSetup.cpp  InitialAMRSetup.h  test_func.h
test/utils/config/: CMakeLists.txt  ConfigMapTest.cpp
tools/ParaViewKalypssoPlugin/src/: CMakeLists.txt  paraview.plugin
unit_test/: CMakeLists.txt  StencilHelper_3d.ini  kalypsso_unittest_utils.h  main.cpp  main_kalypsso_unittest.h
unit_test/core/: BitFieldInteger_test.cpp  DataArrayBlockMultiVar_test.cpp  DataArrayBlock_utils_test.cpp  EdgeDataArrayBlock_utils_test.cpp  Kokkos_Array_extensions_test.cpp  MaterialPresence_test.cpp  MaterialPresence_test_mpi.cpp  StencilHelper_test.cpp  geometry_test.cpp  geometry_utils_test.cpp  kalypsso_data_container_test.cpp  mesh_utils_test.cpp  morton_utils_test.cpp  orchard_key_test.cpp
unit_test/core/vof/: interface_tracking_utils_test.cpp  youngs_test.cpp
unit_test/utils/config/: ConfigMap_test.cpp
unit_test/utils/monitoring/: HostTimer_test.cpp
unit_test/utils/mpi/: ParallelEnv_test.cpp
(+117 files in other folders)
